<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnModeIntro"
    android:orientation="vertical"
    android:background="@drawable/practice_intro_bg">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/learn_mode"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:background="@color/cream3"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200sp"
        android:src="@drawable/learn_mode_intro2"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_of_q"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pns"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diff_level"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/med"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ideal_durn"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hun"
            android:textSize="20sp"/>
    </GridLayout>
    <Button
        android:id="@+id/btnStartPractice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_learning"
        android:layout_margin="20sp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="#F8D97A"/>
</LinearLayout>